add format and amend test

--- a/charts/vela-core/templates/defwithtemplate/configmap.yaml
+++ b/charts/vela-core/templates/defwithtemplate/configmap.yaml
@@ -13,30 +13,28 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: {
-        		containers: [{
-        			volumeMounts: [
-        				// +patchKey=name
-        				for v in parameter.volumes {
-        					{
-        						name:      "volume-\(v.name)"
-        						mountPath: v.mountPath
-        						readOnly:  v.readOnly
-        					}
-        				},
-        			]
-        		}, ...]
-        		volumes: [
+        patch: spec: template: spec: {
+        	containers: [{
+        		volumeMounts: [
         			// +patchKey=name
         			for v in parameter.volumes {
         				{
-        					name: "volume-\(v.name)"
-        					configMap: name: v.name
+        					name:      "volume-\(v.name)"
+        					mountPath: v.mountPath
+        					readOnly:  v.readOnly
         				}
         			},
         		]
-        	}
+        	}, ...]
+        	volumes: [
+        		// +patchKey=name
+        		for v in parameter.volumes {
+        			{
+        				name: "volume-\(v.name)"
+        				configMap: name: v.name
+        			}
+        		},
+        	]
         }
         outputs: {
         	for v in parameter.volumes {
