--- a/charts/vela-core/templates/defwithtemplate/lifecycle.yaml
+++ b/charts/vela-core/templates/defwithtemplate/lifecycle.yaml
@@ -13,18 +13,16 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: containers: [{
-        		lifecycle: {
-        			if parameter.postStart != _|_ {
-        				postStart: parameter.postStart
-        			}
-        			if parameter.preStop != _|_ {
-        				preStop: parameter.preStop
-        			}
+        patch: spec: template: spec: containers: [{
+        	lifecycle: {
+        		if parameter.postStart != _|_ {
+        			postStart: parameter.postStart
         		}
-        	}, ...]
-        }
+        		if parameter.preStop != _|_ {
+        			preStop: parameter.preStop
+        		}
+        	}
+        }, ...]
         parameter: {
         	postStart?: #LifeCycleHandler
         	preStop?:   #LifeCycleHandler
