--- a/charts/vela-core/templates/defwithtemplate/rollout.yaml
+++ b/charts/vela-core/templates/defwithtemplate/rollout.yaml
@@ -35,8 +35,6 @@ spec:
         	rolloutBatches: [...rolloutBatch]
         }
 
-        rolloutBatch: {
-        	replicas: int
-        }
+        rolloutBatch: replicas: int
   skipRevisionAffect: true
 
