--- a/vela-templates/registry/auto-gen/crd-manul-scaler.yaml
+++ b/vela-templates/registry/auto-gen/crd-manul-scaler.yaml
@@ -18,9 +18,7 @@ spec:
         outputs: scaler: {
         	apiVersion: "core.oam.dev/v1alpha2"
         	kind:       "ManualScalerTrait"
-        	spec: {
-        		replicaCount: parameter.replicas
-        	}
+        	spec: replicaCount: parameter.replicas
         }
         parameter: {
         	//+short=r
