--- a/vela-templates/registry/auto-gen/dynamic-sa.yaml
+++ b/vela-templates/registry/auto-gen/dynamic-sa.yaml
@@ -13,22 +13,14 @@ spec:
     cue:
       template: |
         processing: {
-        	output: {
-        		credentials?: string
-        	}
+        	output: credentials?: string
         	http: {
         		method: *"GET" | string
         		url:    parameter.serviceURL
-        		request: {
-        			header: {
-        				"authorization.token": parameter.uidtoken
-        			}
-        		}
+        		request: header: "authorization.token": parameter.uidtoken
         	}
         }
-        patch: {
-        	spec: template: spec: serviceAccountName: processing.output.credentials
-        }
+        patch: spec: template: spec: serviceAccountName: processing.output.credentials
         parameter: {
         	uidtoken:   string
         	serviceURL: string
