--- a/vela-templates/registry/auto-gen/env.yaml
+++ b/vela-templates/registry/auto-gen/env.yaml
@@ -12,22 +12,18 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: {
+        patch: spec: template: spec: {
+        	// +patchKey=name
+        	containers: [{
+        		name: context.name
         		// +patchKey=name
-        		containers: [{
-        			name: context.name
-        			// +patchKey=name
-        			env: [
-        				for k, v in parameter.env {
-        					name:  k
-        					value: v
-        				},
-        			]
-        		}]
-        	}
+        		env: [
+        			for k, v in parameter.env {
+        				name:  k
+        				value: v
+        			},
+        		]
+        	}]
         }
-        parameter: {
-        	env: [string]: string
-        }
+        parameter: env: [string]: string
 
