--- a/vela-templates/registry/auto-gen/init-container.yaml
+++ b/vela-templates/registry/auto-gen/init-container.yaml
@@ -13,33 +13,31 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: {
+        patch: spec: template: spec: {
+        	// +patchKey=name
+        	containers: [{
+        		name: context.name
         		// +patchKey=name
-        		containers: [{
-        			name: context.name
-        			// +patchKey=name
-        			volumeMounts: [{
-        				name:      parameter.mountName
-        				mountPath: parameter.appMountPath
-        			}]
+        		volumeMounts: [{
+        			name:      parameter.mountName
+        			mountPath: parameter.appMountPath
         		}]
-        		initContainers: [{
-        			name:    parameter.name
-        			image:   parameter.image
-        			command: parameter.command
-        			// +patchKey=name
-        			volumeMounts: [{
-        				name:      parameter.mountName
-        				mountPath: parameter.initMountPath
-        			}]
-        		}]
+        	}]
+        	initContainers: [{
+        		name:    parameter.name
+        		image:   parameter.image
+        		command: parameter.command
         		// +patchKey=name
-        		volumes: [{
-        			name: parameter.mountName
-        			emptyDir: {}
+        		volumeMounts: [{
+        			name:      parameter.mountName
+        			mountPath: parameter.initMountPath
         		}]
-        	}
+        	}]
+        	// +patchKey=name
+        	volumes: [{
+        		name: parameter.mountName
+        		emptyDir: {}
+        	}]
         }
         parameter: {
         	name:  string
