--- a/vela-templates/registry/auto-gen/kautoscale.yaml
+++ b/vela-templates/registry/auto-gen/kautoscale.yaml
@@ -15,14 +15,10 @@ spec:
       template: |
         import "encoding/json"
 
-        patch: {
-        	metadata: annotations: {
-        		"my.autoscale.ann": json.Marshal({
-        			"minReplicas": parameter.min
-        			"maxReplicas": parameter.max
-        		})
-        	}
-        }
+        patch: metadata: annotations: "my.autoscale.ann": json.Marshal({
+        	minReplicas: parameter.min
+        	maxReplicas: parameter.max
+        })
         parameter: {
         	min: *1 | int
         	max: *3 | int
