--- a/vela-templates/registry/auto-gen/route.yaml
+++ b/vela-templates/registry/auto-gen/route.yaml
@@ -29,9 +29,7 @@ spec:
         		host: parameter.domain
 
         		if parameter.issuer != "" {
-        			tls: {
-        				issuerName: parameter.issuer
-        			}
+        			tls: issuerName: parameter.issuer
         		}
 
         		if parameter["rules"] != _|_ {
