--- a/vela-templates/registry/auto-gen/virtualgroup.yaml
+++ b/vela-templates/registry/auto-gen/virtualgroup.yaml
@@ -13,16 +13,12 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: {
-        		metadata: labels: {
-        			if parameter.type == "namespace" {
-        				"app.namespace.virtual.group": parameter.group
-        			}
-        			if parameter.type == "cluster" {
-        				"app.cluster.virtual.group": parameter.group
-        			}
-        		}
+        patch: spec: template: metadata: labels: {
+        	if parameter.type == "namespace" {
+        		"app.namespace.virtual.group": parameter.group
+        	}
+        	if parameter.type == "cluster" {
+        		"app.cluster.virtual.group": parameter.group
         	}
         }
         parameter: {
