--- a/charts/vela-core/templates/defwithtemplate/annotations.yaml
+++ b/charts/vela-core/templates/defwithtemplate/annotations.yaml
@@ -13,11 +13,9 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: metadata: annotations: {
-        		for k, v in parameter {
-        			"\(k)": v
-        		}
+        patch: spec: template: metadata: annotations: {
+        	for k, v in parameter {
+        		"\(k)": v
         	}
         }
         parameter: [string]: string
