--- a/charts/vela-core/templates/defwithtemplate/expose.yaml
+++ b/charts/vela-core/templates/defwithtemplate/expose.yaml
@@ -16,11 +16,9 @@ spec:
         outputs: service: {
         	apiVersion: "v1"
         	kind:       "Service"
-        	metadata:
-        		name: context.name
+        	metadata: name: context.name
         	spec: {
-        		selector:
-        			"app.oam.dev/component": context.name
+        		selector: "app.oam.dev/component": context.name
         		ports: [
         			for p in parameter.port {
         				port:       p
