--- a/charts/vela-core/templates/defwithtemplate/ingress-1-20.yaml
+++ b/charts/vela-core/templates/defwithtemplate/ingress-1-20.yaml
@@ -17,12 +17,9 @@ spec:
         outputs: service: {
         	apiVersion: "v1"
         	kind:       "Service"
-        	metadata:
-        		name: context.name
+        	metadata: name: context.name
         	spec: {
-        		selector: {
-        			"app.oam.dev/component": context.name
-        		}
+        		selector: "app.oam.dev/component": context.name
         		ports: [
         			for k, v in parameter.http {
         				port:       v
@@ -35,29 +32,20 @@ spec:
         outputs: ingress: {
         	apiVersion: "networking.k8s.io/v1"
         	kind:       "Ingress"
-        	metadata:
-        		name: context.name
-        	spec: {
-        		rules: [{
-        			host: parameter.domain
-        			http: {
-        				paths: [
-        					for k, v in parameter.http {
-        						path:     k
-        						pathType: "ImplementationSpecific"
-        						backend: {
-        							service: {
-        								name: context.name
-        								port: {
-        									number: v
-        								}
-        							}
-        						}
-        					},
-        				]
-        			}
-        		}]
-        	}
+        	metadata: name: context.name
+        	spec: rules: [{
+        		host: parameter.domain
+        		http: paths: [
+        			for k, v in parameter.http {
+        				path:     k
+        				pathType: "ImplementationSpecific"
+        				backend: service: {
+        					name: context.name
+        					port: number: v
+        				}
+        			},
+        		]
+        	}]
         }
 
         parameter: {
