--- a/charts/vela-core/templates/defwithtemplate/ingress.yaml
+++ b/charts/vela-core/templates/defwithtemplate/ingress.yaml
@@ -17,12 +17,9 @@ spec:
         outputs: service: {
         	apiVersion: "v1"
         	kind:       "Service"
-        	metadata:
-        		name: context.name
+        	metadata: name: context.name
         	spec: {
-        		selector: {
-        			"app.oam.dev/component": context.name
-        		}
+        		selector: "app.oam.dev/component": context.name
         		ports: [
         			for k, v in parameter.http {
         				port:       v
@@ -35,24 +32,19 @@ spec:
         outputs: ingress: {
         	apiVersion: "networking.k8s.io/v1beta1"
         	kind:       "Ingress"
-        	metadata:
-        		name: context.name
-        	spec: {
-        		rules: [{
-        			host: parameter.domain
-        			http: {
-        				paths: [
-        					for k, v in parameter.http {
-        						path: k
-        						backend: {
-        							serviceName: context.name
-        							servicePort: v
-        						}
-        					},
-        				]
-        			}
-        		}]
-        	}
+        	metadata: name: context.name
+        	spec: rules: [{
+        		host: parameter.domain
+        		http: paths: [
+        			for k, v in parameter.http {
+        				path: k
+        				backend: {
+        					serviceName: context.name
+        					servicePort: v
+        				}
+        			},
+        		]
+        	}]
         }
 
         parameter: {
