--- a/charts/vela-core/templates/defwithtemplate/resource.yaml
+++ b/charts/vela-core/templates/defwithtemplate/resource.yaml
@@ -13,15 +13,13 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: containers: [{
-        		metadata: annotations: "customized-resource": "cpu:\(parameter.cpu) memory:\(parameter.memory)"
-        		resources: {
-        			requests: parameter
-        			limits:   parameter
-        		}
-        	}, ...]
-        }
+        patch: spec: template: spec: containers: [{
+        	metadata: annotations: "customized-resource": "cpu:\(parameter.cpu) memory:\(parameter.memory)"
+        	resources: {
+        		requests: parameter
+        		limits:   parameter
+        	}
+        }, ...]
         parameter: {
         	// +usage=Specify the amount of cpu to limit
         	cpu: *1 | number
