--- a/charts/vela-core/templates/defwithtemplate/scaler.yaml
+++ b/charts/vela-core/templates/defwithtemplate/scaler.yaml
@@ -13,9 +13,7 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: replicas: parameter.replicas
-        }
+        patch: spec: replicas: parameter.replicas
         parameter: {
         	// +usage=Specify the number of workload
         	replicas: *1 | int
