--- a/charts/vela-core/templates/defwithtemplate/service-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/service-binding.yaml
@@ -13,30 +13,26 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: {
+        patch: spec: template: spec: {
+        	// +patchKey=name
+        	containers: [{
+        		name: context.name
         		// +patchKey=name
-        		containers: [{
-        			name: context.name
-        			// +patchKey=name
-        			env: [
-        				for envName, v in parameter.envMappings {
-        					name: envName
-        					valueFrom: {
-        						secretKeyRef: {
-        							name: v.secret
-        							if v["key"] != _|_ {
-        								key: v.key
-        							}
-        							if v["key"] == _|_ {
-        								key: envName
-        							}
-        						}
+        		env: [
+        			for envName, v in parameter.envMappings {
+        				name: envName
+        				valueFrom: secretKeyRef: {
+        					name: v.secret
+        					if v["key"] != _|_ {
+        						key: v.key
         					}
-        				},
-        			]
-        		}]
-        	}
+        					if v["key"] == _|_ {
+        						key: envName
+        					}
+        				}
+        			},
+        		]
+        	}]
         }
 
         parameter: {
