--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -32,19 +32,15 @@ spec:
 
         				if parameter["cpu"] != _|_ {
         					resources: {
-        						limits:
-        							cpu: parameter.cpu
-        						requests:
-        							cpu: parameter.cpu
+        						limits: cpu:   parameter.cpu
+        						requests: cpu: parameter.cpu
         					}
         				}
 
         				if parameter["memory"] != _|_ {
         					resources: {
-        						limits:
-        							memory: parameter.memory
-        						requests:
-        							memory: parameter.memory
+        						limits: memory:   parameter.memory
+        						requests: memory: parameter.memory
         					}
         				}
 
@@ -57,43 +53,39 @@ spec:
         				}
         			}]
 
-        		if parameter["volumes"] != _|_ {
-        			volumes: [ for v in parameter.volumes {
-        				{
-        					name: v.name
-        					if v.type == "pvc" {
-        						persistentVolumeClaim: {
-        							claimName: v.claimName
+        			if parameter["volumes"] != _|_ {
+        				volumes: [ for v in parameter.volumes {
+        					{
+        						name: v.name
+        						if v.type == "pvc" {
+        							persistentVolumeClaim: claimName: v.claimName
         						}
-        					}
-        					if v.type == "configMap" {
-        						configMap: {
-        							defaultMode: v.defaultMode
-        							name:        v.cmName
-        							if v.items != _|_ {
-        								items: v.items
+        						if v.type == "configMap" {
+        							configMap: {
+        								defaultMode: v.defaultMode
+        								name:        v.cmName
+        								if v.items != _|_ {
+        									items: v.items
+        								}
         							}
         						}
-        					}
-        					if v.type == "secret" {
-        						secret: {
-        							defaultMode: v.defaultMode
-        							secretName:  v.secretName
-        							if v.items != _|_ {
-        								items: v.items
+        						if v.type == "secret" {
+        							secret: {
+        								defaultMode: v.defaultMode
+        								secretName:  v.secretName
+        								if v.items != _|_ {
+        									items: v.items
+        								}
         							}
         						}
-        					}
-        					if v.type == "emptyDir" {
-        						emptyDir: {
-        							medium: v.medium
+        						if v.type == "emptyDir" {
+        							emptyDir: medium: v.medium
         						}
-        					}
-        				}}]
-        		}
+        					}}]
+        			}
 
+        		}
         	}
-        }
         }
 
         parameter: {
