--- a/charts/vela-core/templates/defwithtemplate/volumes.yaml
+++ b/charts/vela-core/templates/defwithtemplate/volumes.yaml
@@ -13,43 +13,37 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: volumes: [
-        		for v in parameter.volumes {
-        			{
-        				name: v.name
-        				if v.type == "pvc" {
-        					persistentVolumeClaim: {
-        						claimName: v.claimName
-        					}
-        				}
-        				if v.type == "configMap" {
-        					configMap: {
-        						defaultMode: v.defaultMode
-        						name:        v.cmName
-        						if v.items != _|_ {
-        							items: v.items
-        						}
-        					}
-        				}
-        				if v.type == "secret" {
-        					secret: {
-        						defaultMode: v.defaultMode
-        						secretName:  v.secretName
-        						if v.items != _|_ {
-        							items: v.items
-        						}
-        					}
-        				}
-        				if v.type == "emptyDir" {
-        					emptyDir: {
-        						medium: v.medium
+        patch: spec: template: spec: volumes: [
+        	for v in parameter.volumes {
+        		{
+        			name: v.name
+        			if v.type == "pvc" {
+        				persistentVolumeClaim: claimName: v.claimName
+        			}
+        			if v.type == "configMap" {
+        				configMap: {
+        					defaultMode: v.defaultMode
+        					name:        v.cmName
+        					if v.items != _|_ {
+        						items: v.items
         					}
         				}
         			}
-        		},
-        	]
-        }
+        			if v.type == "secret" {
+        				secret: {
+        					defaultMode: v.defaultMode
+        					secretName:  v.secretName
+        					if v.items != _|_ {
+        						items: v.items
+        					}
+        				}
+        			}
+        			if v.type == "emptyDir" {
+        				emptyDir: medium: v.medium
+        			}
+        		}
+        	},
+        ]
 
         parameter: {
         	// +usage=Declare volumes and volumeMounts
