--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -14,9 +14,7 @@ spec:
         	apiVersion: "apps/v1"
         	kind:       "Deployment"
         	spec: {
-        		selector: matchLabels: {
-        			"app.oam.dev/component": context.name
-        		}
+        		selector: matchLabels: "app.oam.dev/component": context.name
 
         		template: {
         			metadata: labels: {
@@ -52,19 +50,15 @@ spec:
 
         					if parameter["cpu"] != _|_ {
         						resources: {
-        							limits:
-        								cpu: parameter.cpu
-        							requests:
-        								cpu: parameter.cpu
+        							limits: cpu:   parameter.cpu
+        							requests: cpu: parameter.cpu
         						}
         					}
 
         					if parameter["memory"] != _|_ {
         						resources: {
-        							limits:
-        								memory: parameter.memory
-        							requests:
-        								memory: parameter.memory
+        							limits: memory:   parameter.memory
+        							requests: memory: parameter.memory
         						}
         					}
 
@@ -86,50 +80,46 @@ spec:
 
         				}]
 
-        			if parameter["imagePullSecrets"] != _|_ {
-        				imagePullSecrets: [ for v in parameter.imagePullSecrets {
-        					name: v
-        				},
-        				]
-        			}
+        				if parameter["imagePullSecrets"] != _|_ {
+        					imagePullSecrets: [ for v in parameter.imagePullSecrets {
+        						name: v
+        					},
+        					]
+        				}
 
-        			if parameter["volumes"] != _|_ {
-        				volumes: [ for v in parameter.volumes {
-        					{
-        						name: v.name
-        						if v.type == "pvc" {
-        							persistentVolumeClaim: {
-        								claimName: v.claimName
+        				if parameter["volumes"] != _|_ {
+        					volumes: [ for v in parameter.volumes {
+        						{
+        							name: v.name
+        							if v.type == "pvc" {
+        								persistentVolumeClaim: claimName: v.claimName
         							}
-        						}
-        						if v.type == "configMap" {
-        							configMap: {
-        								defaultMode: v.defaultMode
-        								name:        v.cmName
-        								if v.items != _|_ {
-        									items: v.items
+        							if v.type == "configMap" {
+        								configMap: {
+        									defaultMode: v.defaultMode
+        									name:        v.cmName
+        									if v.items != _|_ {
+        										items: v.items
+        									}
         								}
         							}
-        						}
-        						if v.type == "secret" {
-        							secret: {
-        								defaultMode: v.defaultMode
-        								secretName:  v.secretName
-        								if v.items != _|_ {
-        									items: v.items
+        							if v.type == "secret" {
+        								secret: {
+        									defaultMode: v.defaultMode
+        									secretName:  v.secretName
+        									if v.items != _|_ {
+        										items: v.items
+        									}
         								}
         							}
-        						}
-        						if v.type == "emptyDir" {
-        							emptyDir: {
-        								medium: v.medium
+        							if v.type == "emptyDir" {
+        								emptyDir: medium: v.medium
         							}
-        						}
-        					}}]
+        						}}]
+        				}
         			}
         		}
         	}
-        }
         }
         parameter: {
         	// +usage=Which image would you like to use for your service
