--- a/vela-templates/registry/auto-gen/kustomize.yaml
+++ b/vela-templates/registry/auto-gen/kustomize.yaml
@@ -13,9 +13,7 @@ spec:
         output: {
         	apiVersion: "source.toolkit.fluxcd.io/v1beta1"
         	kind:       "GitRepository"
-        	metadata: {
-        		name: context.name
-        	}
+        	metadata: name: context.name
         	spec: {
         		interval: parameter.pullInterval
         		url:      parameter.repoUrl
@@ -25,9 +23,7 @@ spec:
         outputs: kustomize: {
         	apiVersion: "kustomize.toolkit.fluxcd.io/v1beta1"
         	kind:       "Kustomization"
-        	metadata: {
-        		name: context.name
-        	}
+        	metadata: name: context.name
         	spec: {
         		interval: parameter.pullInterval
         		sourceRef: {
