--- a/vela-templates/registry/auto-gen/metrics.yaml
+++ b/vela-templates/registry/auto-gen/metrics.yaml
@@ -26,9 +26,7 @@ spec:
         outputs: metrics: {
         	apiVersion: "standard.oam.dev/v1alpha1"
         	kind:       "MetricsTrait"
-        	spec: {
-        		scrapeService: parameter
-        	}
+        	spec: scrapeService: parameter
         }
         parameter: {
         	// +usage=Format of the metrics, default as prometheus
