--- a/vela-templates/registry/auto-gen/node-affinity.yaml
+++ b/vela-templates/registry/auto-gen/node-affinity.yaml
@@ -13,27 +13,25 @@ spec:
   schematic:
     cue:
       template: |
-        patch: {
-        	spec: template: spec: {
-        		if parameter.affinity != _|_ {
-        			affinity: nodeAffinity: requiredDuringSchedulingIgnoredDuringExecution: nodeSelectorTerms: [{
-        				matchExpressions: [
-        					for k, v in parameter.affinity {
-        						key:      k
-        						operator: "In"
-        						values:   v
-        					},
-        				]}]
-        		}
-        		if parameter.tolerations != _|_ {
-        			tolerations: [
-        				for k, v in parameter.tolerations {
-        					effect:   "NoSchedule"
+        patch: spec: template: spec: {
+        	if parameter.affinity != _|_ {
+        		affinity: nodeAffinity: requiredDuringSchedulingIgnoredDuringExecution: nodeSelectorTerms: [{
+        			matchExpressions: [
+        				for k, v in parameter.affinity {
         					key:      k
-        					operator: "Equal"
-        					value:    v
-        				}]
-        		}
+        					operator: "In"
+        					values:   v
+        				},
+        			]}]
+        	}
+        	if parameter.tolerations != _|_ {
+        		tolerations: [
+        			for k, v in parameter.tolerations {
+        				effect:   "NoSchedule"
+        				key:      k
+        				operator: "Equal"
+        				value:    v
+        			}]
         	}
         }
         parameter: {
