--- a/docs/examples/obervability/initializer-2.yaml
+++ b/docs/examples/obervability/initializer-2.yaml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: grafana
+  name: prometheus
 spec: { }
-
 ---
 apiVersion: core.oam.dev/v1beta1
 kind: Initializer
@@ -23,6 +22,15 @@ spec:
             repoType: helm
             repoUrl: https://prometheus-community.github.io/helm-charts
             targetNamespace: prometheus
+            values:
+              alertmanager:
+                persistentVolume:
+                  storageClass: "alicloud-disk-available"
+                  size: "20Gi"
+              server:
+                persistentVolume:
+                  storageClass: "alicloud-disk-available"
+                  size: "20Gi"
           traits:
             - type: pure-ingress # add ingress for loki service
               properties:
