--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -158,6 +158,24 @@ spec:
               name: tls-cert-vol
               readOnly: true
           {{ end }}
+        {{- if .Values.apiserver.enabled -}}
+        - name: {{ .Release.Name }}-api
+          securityContext:
+          {{- toYaml .Values.securityContext | nindent 12 }}
+          command:
+            - "apiserver"
+          args:
+            - "start"
+            - "--port={{ .Values.apiserver.port }}"
+          ports:
+            - containerPort: {{ .Values.apiserver.port }}
+              name: api
+              protocol: TCP
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+          imagePullPolicy: {{ quote .Values.image.pullPolicy }}
+          resources:
+          {{- toYaml .Values.resources | nindent 12 }}
+        {{ end }}
       {{ if .Values.admissionWebhooks.enabled }}
       volumes:
         - name: tls-cert-vol
