--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -713,6 +713,9 @@ spec:
                 items:
                   description: ApplicationComponent describe the component of application
                   properties:
+                    externalRevision:
+                      description: ExternalRevision specified the component revisionName
+                      type: string
                     name:
                       type: string
                     properties:
