--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_envbindings.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_envbindings.yaml
@@ -73,6 +73,10 @@ spec:
                           description: ApplicationComponent describe the component
                             of application
                           properties:
+                            externalRevision:
+                              description: ExternalRevision specified the component
+                                revisionName
+                              type: string
                             name:
                               type: string
                             properties:
