--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
@@ -72,6 +72,10 @@ spec:
                         description: ApplicationComponent describe the component of
                           application
                         properties:
+                          externalRevision:
+                            description: ExternalRevision specified the component
+                              revisionName
+                            type: string
                           name:
                             type: string
                           properties:
